<resources>
    <string name="app_name">Sklep</string>
    <string name="nav_home">Home</string>
    <string name="nav_cart">Koszyk</string>
    <string name="send_mail">Wyśli maila</string>
    <string name="about">O Sklepie</string>
    <string name="share">Udostępnij</string>
    <string name="log_out">Wyloguj się</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="log_in">Zaloguj się</string>
    <string name="witaj_w_sklpie_komputerx">Witaj w KOMPUTEREX</string>
    <string name="succes_login">Udało się zalogować</string>
    <string name="error_login">Błąd</string>
    <string name="registerInfo">Nie masz konta?  Zarejestuj się!</string>
    <string name="registerInKomputerx">Zarejestruj się w KOMPUTEREX</string>
    <string name="register">Zarejestruj się</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="loginInfo">Masz już konto? Zaloguj się!</string>
    <string name="succes_register">Zarejestrowano! Zaloguj się!</string>
    <string name="select">Wybierz</string>
    <string name="choose_keyboard">Wybierz klawiaturę</string>
    <string name="choose_mouse">Wybierz Myszkę</string>
    <string name="amount">"Ilość: "</string>
    <string name="chosen_keyboards">Wybrane klawiatury</string>
    <string name="chosen_mouses">Wybrane myszki</string>
    <string name="total_price">"Cena za wszystko: "</string>
    <string name="save">Zapisz</string>
    <string name="delete">Usuń</string>
    <string name="addons">"Dodatki "</string>
    <string name="clear">Wyczyść</string>
    <string name="options">Narzędzia</string>
    <string name="emailStart">Zamówienie na</string>
    <string name="email_before">" i na akcesoria: "</string>
    <string name="about_info">Autorem jest Wiktor Zieliński 4p\njunior fullstack developer A100</string>
    <string name="ok" translatable="false">OK</string>

</resources>